k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dotnetcore-api
  name: dotnetcore-api
spec:
  replicas: 6
  selector:
    matchLabels:
      app: dotnetcore-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dotnetcore-api
    spec:
      containers:
      - image: quay.io/rh-ee-srehman/dotnetcore:latest
        imagePullPolicy: Always
        name: dotnetcore-api
        ports:
        - containerPort: 6001
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
